--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  background: #eee;
+  font-family: 'Slabo 27px', serif;
 }
